--- a/Changes
+++ b/Changes
@@ -1,11 +1,15 @@
 
+
+Version 3.7.3. Released February 12, 2018 (git tag 3.7.3)
+
+  - Test tweak so we don't try to use jsonb on older versions.
+    [CPAN ticket #124934]
+
+
 Version 3.7.2  Released February 11, 2018 (git tag 3.7.2)
 
   - Remove Data::Peek dependency accidentally left in t/12placeholders.t
     [CPAN ticket #124393]
-
-  - Test tweak so we don't try to use jsonb on older versions.
-    [CPAN ticket #124934]
 
 
 Version 3.7.1  Released February 11, 2018 (git tag 3.7.1)
