--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 
 Version 3.8.0
 
+  - Increase minimum supported PostgreSQL version to 8.0
+    [Dagfinn Ilmari Mannsåker]
+
   - Add support for foreign tables in table_info() and column_info()
     [Dagfinn Ilmari Mannsåker]
 
