Handle backslash-escaped quotes in E'' strings
In passing, rename the standard_conforming_strings variable to
non_standard_strings, so it reads the right way around in boolean
expressions.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 
+  - Handle backslash-escaped quotes in E'' strings
+
 Version 3.8.0
 
   - Add support for foreign tables in table_info() and column_info()
