--- a/Changes
+++ b/Changes
@@ -1,12 +1,13 @@
 
-  - Handle backslash-escaped quotes in E'' strings
-
 Version 3.8.0
 
   - Add support for foreign tables in table_info() and column_info()
     [Dagfinn Ilmari Mannsåker]
 
   - Return the current database name as TABLE_CAT in info methods
+    [Dagfinn Ilmari Mannsåker]
+
+  - Handle backslash-escaped quotes in E'' strings
     [Dagfinn Ilmari Mannsåker]
 
 
