Fix client_min_messages=FATAL test on upcoming PostgreSQL releases
The upcoming minor releases of PostgreSQL cap client_min_messages to
ERROR to avoid the case this test was testing for.  Skip the test if
client_min_messages doesn't come back as 'fatal' after we set it.

--- a/Changes
+++ b/Changes
@@ -16,6 +16,9 @@ Version 3.8.0
   - Fix parsing of PostgreSQL versions >= 10 on Debian/Ubuntu
     [Dagfinn Ilmari Mannsåker]
 
+  - Fix client_min_messages=FATAL test when PostgreSQL caps it to ERROR
+    [Dagfinn Ilmari Mannsåker]
+
 
 Version 3.7.4. Released February 12, 2018 (git tag 3.7.4)
 
