Fix ->ping error detection on PostgreSQL 12
The libpq write error handling was revamped in PostgreSQL 12, so it
can return a non-NULL pointer even if it encouters a fatal error.

Instead rely on PQresultStatus() to detect fatal errors (including
NULL pointers).

--- a/Changes
+++ b/Changes
@@ -23,6 +23,9 @@ Version 3.8.0
     [Dagfinn Ilmari Mannsåker]
     [CPAN ticket #128529]
 
+  - Fix ->ping error detection on PostgreSQL 12
+    [Dagfinn Ilmari Mannsåker]
+
   - Adjust tests for new pg_ctl output
     [Erik Rijkers    er at xs4all.nl]
     [CPAN ticket #128966]
