--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 
-Version 3.8.0
+Version 3.8.0, released April 25, 2019
 
   - Increase minimum supported PostgreSQL version to 8.0
     [Dagfinn Ilmari Mannsåker]
@@ -44,6 +44,7 @@ Version 3.8.0
 
   - Support GENERATED ... AS IDENTITY columns in last_insert_id()
     [Dagfinn Ilmari Mannsåker]
+
 
 Version 3.7.4. Released February 12, 2018 (git tag 3.7.4)
 
