Fix E'' string escape handling on archs with unsigned chars

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Version 3.8.1
+
+  - Fix E'' string escape handling on architectures with unsigned chars
+    [Github issue #46]
 
 Version 3.8.0, released April 25, 2019
 
