--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 
-Version 3.8.9_1
+Version 3.9.0, released August 13, 2019
 
   - ShowErrorStatement works for "quickexec" do() calls
     [Dmitry Karasik]
