--- a/Changes
+++ b/Changes
@@ -1,4 +1,14 @@
 
+Version 3.10.0
+
+  - Add DBI SQL_BLOB, SQL_BINARY and SQL_LONGVARBINARY types as alias for PG_BYTEA
+    [Pali]
+
+  - Treat partitioned tables same as regular tables for column_info, table_info, 
+    and foreign_key_info (i.e. support pg_class.relkind = 'p')
+    [Octavian R. Corlade]
+
+
 Version 3.9.1, released August 15, 2019
 
     Bugfix for pg_error_field: make sure we do not feed null to newSVpv,
