--- a/Changes
+++ b/Changes
@@ -10,11 +10,13 @@ Version 3.10.0  (released September 3, 2019)
     [Github issue #57]
 
   - If a commit or rollback fails, do not set BegunWork
+    [Greg Sabino Mullane]
     [Github issue #40]
 
   - Treat partitioned tables same as regular tables for column_info, table_info, 
     and foreign_key_info (i.e. support pg_class.relkind = 'p')
     [Octavian R. Corlade]
+    [Github PR #55]
 
   - Allow last_insert_id() to work against inherited tables
     [Greg Sabino Mullane]
@@ -22,6 +24,7 @@ Version 3.10.0  (released September 3, 2019)
 
   - Add DBI SQL_BLOB, SQL_BINARY and SQL_LONGVARBINARY types as alias for PG_BYTEA
     [Pali]
+    [Github PR #58]
 
 
 Version 3.9.1  (released August 15, 2019)
