--- a/Changes
+++ b/Changes
@@ -1,4 +1,11 @@
 
+Version ??
+
+  - Adjust tests to pass on 32-bit machines
+    [Greg Sabino Mullane]
+    [RT #131482]
+
+
 Version 3.10.1  (released January 13, 2020)
 
   - Prevent double-free memory errors
