--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 
-Version 3.10.2  (unreleased)
+Version 3.10.2  (released January 17, 2020)
 
   - Adjust tests to pass on 32-bit machines
     [Greg Sabino Mullane]
