--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 
-Version 3.10.3  (unreleased)
+Version 3.10.3  (released January 20, 2020)
 
     Set things cleared via PQclear to NULL as soon as possible, to remove race conditions.
     [Greg Sabino Mullane]
