Fetch statistics_info completely in SQL
This combines the table and index stats in a single UNION ALL query,
avoiding repetition of the column lists and the extra buffering via
DBD::Sponge.  It also reduces the the risk of mismatches betwen the
two queries, since SQL requres the column types of a UNION to match.

This changes the return value from undef to an empty result set when
the specified table doesn't exist and the user not limiting the
results to unique indexes.  The new behaviour mathces the behaviour
when requesting only unique indexes, and the behaviour of other DBDs.

--- a/Changes
+++ b/Changes
@@ -3,6 +3,10 @@ Changes for the DBD::Pg module
 RT refers to rt.cpan.org
 
 
+ - Return an empty result set instead of undef from statistics_info
+   when the requested table doesn't exist and $unique_only is false.
+   [Dagfinn Ilmari Mannsåker]
+
 Version 3.10.5  (released March 23, 2020)
 
  - Minor adjustment for Windows build
