--- a/Changes
+++ b/Changes
@@ -2,21 +2,14 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
+Version 3.11.0  (unreleased)
+
  - Indicate non-key index columns (INCLUDE) in statistics_info
    [Dagfinn Ilmari Mannsåker]
 
  - Return an empty result set instead of undef from statistics_info
-   when the requested table doesn't exist and $unique_only is false.
+     when the requested table doesn't exist and $unique_only is false.
    [Dagfinn Ilmari Mannsåker]
-
-Version 3.10.5  (released March 23, 2020)
-
- - Minor adjustment for Windows build
-   (RT ticket #131752)
-
- - Allow test suite to work on an EnterpriseDB server
-   [H.Merijn Brand]
-   (RT ticket #132203)
 
  - Fix segfault during st destroy
    [Gregory Oschwald]
@@ -27,12 +20,22 @@ Version 3.10.5  (released March 23, 2020)
    [Greg Sabino Mullane]
    (Github issue #67)
 
- - Add small warning regarding ShowErrorStatement
-   (RT ticket #120268)
-
  - Improve UTF-8 wording in docs
    [Felipe Gasper]
    (Github pull request #65)
+
+
+Version 3.10.5  (released March 23, 2020)
+
+ - Minor adjustment for Windows build
+   (RT ticket #131752)
+
+ - Allow test suite to work on an EnterpriseDB server
+   [H.Merijn Brand]
+   (RT ticket #132203)
+
+ - Add small warning regarding ShowErrorStatement
+   (RT ticket #120268)
 
 
 Version 3.10.4  (released February 3, 2020)
