Return the table info row last in statistics_info
This ordering is implied by the DBI documentation (although the SQL
standard says ordering of nulls is implementation-defined).  Also,
PostgreSQL before 8.3 doesn't support ORDER BY … NULLS FIRST.

--- a/Changes
+++ b/Changes
@@ -6,6 +6,10 @@ Version 3.11.2  (unrleased)
 
  - Add CONTRIBUTING.md file
 
+ - Return the table info row last in statistics_info.
+    This fixes statistics_info on pre-8.3 servers.
+   [Dagfinn Ilmari Mannsåker]
+
 
 Version 3.11.1  (released April 28, 2020)
 
