--- a/Changes
+++ b/Changes
@@ -2,6 +2,13 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
+Version 3.11.1  (unreleased)
+
+ - Adjust Makefile to fix failing 'fulltest' target on BSD systems
+   [Slaven Rezić]
+   (RT ticket #132412)
+
+
 Version 3.11.0  (released April 23, 2020)
 
  - Indicate non-key index columns (INCLUDE) in statistics_info
