--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
-Version 3.11.1  (unreleased)
+Version 3.11.1  (released April 28, 2020)
 
  - Adjust Makefile to fix failing 'fulltest' target on BSD systems
    [Slaven Rezić]
