Set release date for 3.12.1

--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
-Version 3.12.1  (unreleased)
+Version 3.12.1  (released June 3, 2020)
 
  - Remove test that assumed '(12,34)' is an invalid entry for type "circle",
      as the Postgres source code changed this behavior on April 7, 2020
