--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
-Version 3.12.4  (unreleased)
+Version 3.12.3_1  (BETA!)
 
  - Fix regression in Perl length() for returned query results
    [Jon Jensen]
