Make sure ->tables() always returns a list

--- a/Changes
+++ b/Changes
@@ -2,11 +2,14 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
-Version 3.14.0  (unlreleased)
+Version 3.14.0  (unreleased)
 
- - The $dbh->primary_key_info and $dbh->foreign_key_info will always return 
+ - The $dbh->primary_key_info and $dbh->foreign_key_info methods will always return 
      a statement handle, even on no results. Previously, they returned undef directly.
    Callers can check if the returned handle contains any rows.
+   [Greg Sabino Mullane]
+
+ - The $dbh->tables method will always return a list, even if it is empty.
    [Greg Sabino Mullane]
 
  - Adjust tests to force loading proper version of DBD::Pg
