Fix weird version undef problem for RT #83057

--- a/Changes
+++ b/Changes
@@ -2,6 +2,14 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
+
+Version 3.14.1
+
+ - Force the version string so undefined errors in the "driver" sub go away.
+   [Greg Sabino Mullane]
+   (RT ticket #83057)
+
+
 Version 3.14.0  (released July 19, 2020)
 
  - The $dbh->primary_key_info and $dbh->foreign_key_info methods will now always return 
