--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
+Version 3.14.2  (unreleased)
+
+ - Fix ENV typo in the test suite
+   [Gregor Herrmann]
+
 
 Version 3.14.1  (released August 12, 2020)
 
