--- a/TODO
+++ b/TODO
@@ -3,12 +3,11 @@ Possible items to do, in no particular order
 Feature requests can be entered at 
 http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
 
-May also be some at
+or on github:
+
 https://github.com/bucardo/dbdpg
-(although we prefer using cpan.org)
 
 
-- Get a lint checker for the spellcheck words: sorted, non-duplicated, valid, etc.
 - Get the "make fulltest" bit working properly
 - Change license to Artistic 2
 - Remove the "goto" calls in the tests
