--- a/Changes
+++ b/Changes
@@ -2,6 +2,14 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
+Version 3.15.0 (unreleased)
+
+ - Adjust tests for the fact that reltuples can be -1 in Postgres
+     version 13 and later. This is mostly reflected in the CARDINALITY 
+     column for $dbh->statistics_info.
+   [Greg Sabino Mullane]
+
+
 Version 3.14.2  (released August 13, 2020)
 
  - Fix ENV typo in the test suite
