--- a/README
+++ b/README
@@ -69,17 +69,17 @@ usually (but not always) has people who can help you with DBD::Pg.
 BUG REPORTS:
 -----------
 
-If you feel certain you have found a bug, you can file a bug report by visiting:
-http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
-and selecting the "Report a new bug" link. Please check that the bug 
-has not already been reported first.
+Bug reports are welcome at:
+
+https://github.com/bucardo/dbdpg/issues
+
 
 PATCHES:
 --------
 
-Patches are always welcome: the best way is to attach a git diff output 
-to a bug report at the above URL for rt.cpan.org. Feel free to ask 
-for a commit bit as well, if you think you might be patching more than once. :)
+Patches are always welcome: the best way is to create a Pull Request 
+at https://github.com/bucardo/dbdpg
+
 
 INSTALLATION:
 -------------
