--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ Possible items to do, in no particular order
 Feature requests can be entered at 
 https://github.com/bucardo/dbdpg/issues
 
+- Evaluate if we really need strtod in the code
 - Have docs describe various ways to set client_encoding
 - Get the "make fulltest" bit working properly
 - Change license to Artistic 2
