--- a/Changes
+++ b/Changes
@@ -14,6 +14,10 @@ Version 3.15.0 (unreleased)
    [Greg Sabino Mullane]
    (RT ticket #136553)
 
+ - Remove the experimental 'fulltest' Makefile target.
+   [Greg Sabino Mullane]
+   (RT ticket #136567)
+
 
 Version 3.14.2  (released August 13, 2020)
 
