Goodbye to freenode

--- a/README
+++ b/README
@@ -62,7 +62,7 @@ To subscribe, email dbd-pg-subscribe@perl.org
 To unsubscribe, email dbd-pg-unsubscribe@perl.org
 To get help regarding your subscription, email dbd-pg-help@perl.org
 
-You can also try the #postgresql channel on irc.freenode.net, which 
+You can also try the #postgresql channel on irc.libera.chat, which 
 usually (but not always) has people who can help you with DBD::Pg.
 
 
