--- a/Changes
+++ b/Changes
@@ -2,13 +2,11 @@ Changes for the DBD::Pg module
 
 RT refers to rt.cpan.org
 
-Version 3.?? (not released yet)
+Version ?? (unreleased)
 
  - Replace use of "vars" with "our"
    [James Raspass <jraspass@gmail.com>]
    (Github pull request #75)
-
-
 
 
 Version 3.15.0 (released May 21, 2021)
